// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UpIcon renders correctly 1`] = `
<svg
  height="16"
  viewBox="0 0 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Up Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M16 0H0v16h16z"
    />
    <path
      d="M8 4.869l-6.678 6.678a.774.774 0 0 1-1.095-1.094l7.226-7.226a.774.774 0 0 1 1.094 0l7.226 7.226a.774.774 0 0 1-1.095 1.094L8 4.87z"
      fill="#262626"
      fillOpacity=".5"
      fillRule="nonzero"
    />
  </g>
</svg>
`;

exports[`UpIcon renders large correctly 1`] = `
<svg
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Up Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M24 0H0v24h24z"
    />
    <path
      d="M22.692 17.542a.766.766 0 1 0 1.084-1.084L12.542 5.224c-.3-.299-.785-.299-1.084 0L.224 16.458a.766.766 0 1 0 1.084 1.084L12 6.85l10.692 10.692z"
      fill="#262626"
      fillOpacity=".5"
      fillRule="nonzero"
    />
  </g>
</svg>
`;
